--- a/README.org
+++ b/README.org
@@ -8,23 +8,27 @@ This is a [[https://github.com/doomemacs/doomemacs][doom emacs]] configuration o
 
 ** status of devcontainer support
 
-Currently I'm the main contributor of lsp-bridge's devcontainer support. 
-Here I trace the features that I'd like to add, and what I've done for Emacs to work with devcontainer.
+Currently I'm the main contributor of lsp-bridge's devcontainer support. Here I trace the features that I'd like to add, and what I've done for Emacs to work with devcontainer.
 
-- DONE devcontainer-feature: able to install lsp-bridge
-- DONE devcontainer-feature: able to install any language server that lsp-bridge supports. (Consider it's done, while a few language servers are missing at Nixpkgs or require special setting, also language server which runs on Windows is not supported)
-- DONE lsp-bridge: open container file using =find-file= /docker:
-- DONE lsp-bridge: enable auto-completion
-- DONE lsp-bridge: save file by =lsp-bridge-remote-save-buffer=
-- DONE lsp-bridge: format buffer using =apheleia=
-- DONE lsp-bridge: jump to definition and jump back
-- DONE doom-emacs: ripgrep search in container
-- DONE doom-emacs: open vTerm with =bash= in container
+| status | scope                |                                                                                        |
+|--------+----------------------+----------------------------------------------------------------------------------------|
+| DONE   | devcontainer-feature | able to install lsp-bridge                                                             |
+| DONE   | devcontainer-feature | able to install any language server that lsp-bridge supports [1]                       |
+| DONE   | lsp-bridge           | open container file using =find-file= /docker:                                         |
+| DONE   | lsp-bridge           | enable auto-completion                                                                 |
+| DONE   | lsp-bridge           | save file by =lsp-bridge-remote-save-buffer=                                           |
+| DONE   | lsp-bridge           | format buffer using =apheleia=                                                         |
+| DONE   | lsp-bridge           | jump to definition and jump back                                                       |
+| DONE   | doom-emacs           | ripgrep search in container                                                            |
+| DONE   | doom-emacs           | open vTerm with =bash= in container                                                    |
+| TBD    | devcontainer-feature | instructions of how to setup with =Python= projects                                    |
+| TBD    | devcontainer         | manage container in Emacs with [[https://github.com/nohzafk/cli2eli][CLI2ELI]]         |
+| TBD    | devcontainer         | get rid of VSCode [2]                                                                  |
+| TBD    | lsp-bridge           | auto re-connect to the new container and re-open file if devcontainer has been rebuilt |
 
-- TBD  devcontainer-feature: add instructions of how to setup emacs to work with =Python= projects in devcontainer
-- TBD  devcontainer: manage container in Emacs with [[https://github.com/nohzafk/cli2eli][CLI2ELI]]
-- TBD  devcontainer: get rid of VSCode for using lsp-bridge in devcontainer, currently VSCode is needed as port forward is not implemented by =devcontainer CLI=. POC at [[https://github.com/nohzafk/devcontainer-cli-port-forwarder][devcontainer-cli-port-forwarder]]
-- TBD  lsp-bridge: auto re-connect to the new container and re-open file if devcontainer has been rebuilt
+
+- [1] Consider it's done, while a few language servers are missing at Nixpkgs or require special setting, also language server which runs on Windows is not supported
+- [2] Currently VSCode is needed as port forward is not implemented by =devcontainer CLI=. POC at [[https://github.com/nohzafk/devcontainer-cli-port-forwarder][devcontainer-cli-port-forwarder]]
 
 * Remote Editing Configuration
 ** TRAMP
